--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "target": "es5",
         "noImplicitAny": true,
         "removeComments": true,
-        "outDir": "built/js/",
+        "outDir": "built",
         "rootDir": "src",
         "sourceMap": false
     },
