--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Conventions for writing plain text",
   "main": "built/js/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive ./built/Test"
   },
   "keywords": [
     "markup",
