--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "removeComments": true,
         "outDir": "built",
         "rootDir": "src",
-        "sourceMap": false
+        "sourceMap": true
     },
     "exclude": [
         "node_modules"
