--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "formatting"
   ],
   "author": "Daniel Miller <daniel@wants.email>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5"
+  }
 }
