--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
 			"name": "Launch",
 			"type": "node",
 			"request": "launch",
-			"program": "built/js/index.js",
+			"program": "${workspaceRoot}/built/js/index.js",
 			"stopOnEntry": false,
 			"args": [],
-			"cwd": ".",
+			"cwd": "${workspaceRoot}/",
 			"runtimeExecutable": null,
 			"runtimeArgs": [
 				"--nolazy"
@@ -18,7 +18,7 @@
 			},
 			"externalConsole": false,
 			"sourceMaps": true,
-			"outDir": "built"
+			"outDir": "${workspaceRoot}/built"
 		},
 		{
 			"name": "Attach",
@@ -26,7 +26,7 @@
 			"request": "attach",
 			"port": 5858,
 			"sourceMaps": true,
-			"outDir": "built"
+			"outDir": "${workspaceRoot}/built"
 		}
 	]
 }
