--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "commonjs",
     "target": "es5",
     "noImplicitAny": true,
+    "noImplicitReturns": true,
     "removeComments": true,
     "outDir": "built",
     "rootDir": "src",
