Add typescript as local dev dependency

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "sourceMap": true
   },
   "exclude": [
-    "node_module",
+    "node_modules",
     "typings/browser",
     "typings/browser.d.ts"
   ]
