--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "removeComments": true,
     "outDir": "built",
     "rootDir": "src",
-    "sourceMap": true
+    "sourceMap": true,
+    "declaration": true
   },
   "exclude": [
     "node_modules",
