--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,6 @@
     "declaration": true
   },
   "exclude": [
-    "node_modules",
-    "typings/browser",
-    "typings/browser.d.ts"
+    "node_modules"
   ]
 }
