--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
 			"name": "Launch",
 			"type": "node",
 			"request": "launch",
-			"program": "${workspaceRoot}/built/index.js",
+			"program": "${workspaceRoot}/compiled/index.js",
 			"stopOnEntry": false,
 			"args": [],
 			"cwd": "${workspaceRoot}/",
@@ -18,7 +18,7 @@
 			},
 			"externalConsole": false,
 			"sourceMaps": true,
-			"outDir": "${workspaceRoot}/built"
+			"outDir": "${workspaceRoot}/compiled"
 		},
 		{
 			"name": "Attach",
@@ -26,7 +26,7 @@
 			"request": "attach",
 			"port": 5858,
 			"sourceMaps": true,
-			"outDir": "${workspaceRoot}/built"
+			"outDir": "${workspaceRoot}/compiled"
 		}
 	]
 }
