--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "test": "mocha --recursive ./compiled/Test",
-    "posttest": "mocha ./package-tests.js"    
+    "posttest": "mocha ./package-tests.js"
   },
   "keywords": [
     "markup",
@@ -22,6 +22,7 @@
   "devDependencies": {
     "browserify": "^13.0.1",
     "chai": "^3.5.0",
+    "istanbul": "^0.4.4",
     "mocha": "^2.4.5",
     "typescript": "^1.8.10"
   }
