--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chai": "latest",
     "istanbul": "latest",
     "mocha": "latest",
+    "tslint": "^3.13.0",
     "typescript": "latest"
   }
 }
