[Broken] Upgrade to TypeScript 2.0

--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "istanbul": "latest",
     "mocha": "latest",
     "tslint": "latest",
-    "typescript": "latest"
+    "typescript": "^2.0.0"
   }
 }
