--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
+    "noImplicitThis": true,
     "forceConsistentCasingInFileNames": true,
     "removeComments": true,
     "outDir": "compiled",
