--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitThis": true,
     "noUnusedParameters": true,
+    "noUnusedLocals": true,
     "forceConsistentCasingInFileNames": true,
     "removeComments": true,
     "outDir": "compiled",
