--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Up is a lightweight markup language for writing in plain text",
   "main": "lib/index.js",
   "files": [
-    "lib"
+    "dist"
   ],
   "scripts": {
     "test": "make test"
