--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "up",
   "version": "0.0.0",
   "description": "Up is a lightweight markup language for writing in plain text",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "files": [
     "dist"
   ],
