--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "up",
+  "name": "write-up",
   "version": "0.0.0",
   "description": "A lightweight markup language for writing structured documents in plain text",
   "main": "dist/index.js",
