--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "write-up",
-  "version": "0.1.0",
+  "version": "1.0.0-rc.1",
   "description": "A lightweight markup language for writing structured documents in plain text",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
